# tiny-transformer-from-scratch

./: .gitignore  MakeFile  pyproject.toml
conf/experiments/: setup.yaml
docs/diagram/: encoder_proposals.drawio
scripts/: download_tiny_shakespeare.py
src/data_loading/: data_loading.py
src/data_loading/utils/: txt_io.py
src/orchestration/: cli.py  orchestration.py  schema.py
src/tokenization/: character_tokenizer.py  tokenization.py
src/utils/: path_utils.py  yaml_io.py
tests/data_loading/utils/: test_txt_io.py
tests/orchestration/: test_cli.py  test_schema.py
tests/tokenization/: test_character_tokenizer.py
tests/utils/: test_path_utils.py  test_yaml_io.py
