[project]
name = "tiny-transformer-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "coverage>=7.15.1",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "D",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/__init__.py",
    "src/orchestration/orchestration.py",
    "src/data_loading/data_loading.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
